--- a/transform_functions.Rmd
+++ b/transform_functions.Rmd
@@ -18,8 +18,8 @@ transform_data
 ```
 
 ```{r}
-transform_data <- transform_data %>% 
+data_new <- transform_data %>% 
   mutate(data_sqr <- hp^2)
-transform_data
+data_new
 ```
 
